raw version freeze July 18

--- a/Fractal1/Fractal1/Fractal1.csproj
+++ b/Fractal1/Fractal1/Fractal1.csproj
@@ -173,6 +173,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="FractalCanvass.aspx" />
     <Content Include="FractalContainer.ascx" />
+    <Content Include="OldDefaultPage.aspx" />
     <Content Include="packages.config" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -397,6 +398,13 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="OldDefaultPage.aspx.cs">
+      <DependentUpon>OldDefaultPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OldDefaultPage.aspx.designer.cs">
+      <DependentUpon>OldDefaultPage.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
