--- a/Fractal1/Fractal1/Fractal1.csproj
+++ b/Fractal1/Fractal1/Fractal1.csproj
@@ -163,21 +163,18 @@
     <Content Include="Account\ResetPasswordConfirmation.aspx" />
     <Content Include="Account\TwoFactorAuthenticationSignIn.aspx" />
     <Content Include="Account\VerifyPhoneNumber.aspx" />
-    <Content Include="aspx_graphics.aspx" />
-    <Content Include="Canvass1.aspx" />
-    <Content Include="Canvass1Q1.aspx" />
-    <Content Include="Canvass2.aspx" />
-    <Content Include="Canvass2Q2.aspx" />
-    <Content Include="Canvass3.aspx" />
+    <Content Include="FractalCanvass1.aspx" />
+    <Content Include="FractalCanvass3.aspx" />
+    <Content Include="FractalCanvass2.aspx" />
+    <Content Include="FractalCanvass4.aspx" />
+    <Content Include="TrigoGraph.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="FractalCanvass.aspx" />
     <Content Include="TargetActualGraphContainer.ascx" />
     <Content Include="GraphicDashBoard.aspx" />
-    <Content Include="OldDefaultPage.aspx" />
     <Content Include="packages.config" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -218,7 +215,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Site.Master" />
-    <Content Include="TestGraphCanvass.aspx" />
+    <Content Include="TargetActualGraphCanvass.aspx" />
     <Content Include="TestGraphs.aspx" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
@@ -350,48 +347,41 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
-    <Compile Include="aspx_graphics.aspx.cs">
-      <DependentUpon>aspx_graphics.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="aspx_graphics.aspx.designer.cs">
-      <DependentUpon>aspx_graphics.aspx</DependentUpon>
-    </Compile>
     <Compile Include="BusinessLayer\SalesData.cs" />
-    <Compile Include="Canvass1.aspx.cs">
-      <DependentUpon>Canvass1.aspx</DependentUpon>
+    <Compile Include="FractalCanvass1.aspx.cs">
+      <DependentUpon>FractalCanvass1.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Canvass1.aspx.designer.cs">
-      <DependentUpon>Canvass1.aspx</DependentUpon>
+    <Compile Include="FractalCanvass1.aspx.designer.cs">
+      <DependentUpon>FractalCanvass1.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Canvass1Q1.aspx.cs">
-      <DependentUpon>Canvass1Q1.aspx</DependentUpon>
+    <Compile Include="FractalCanvass3.aspx.cs">
+      <DependentUpon>FractalCanvass3.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Canvass1Q1.aspx.designer.cs">
-      <DependentUpon>Canvass1Q1.aspx</DependentUpon>
+    <Compile Include="FractalCanvass3.aspx.designer.cs">
+      <DependentUpon>FractalCanvass3.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Canvass2.aspx.cs">
-      <DependentUpon>Canvass2.aspx</DependentUpon>
+    <Compile Include="FractalCanvass2.aspx.cs">
+      <DependentUpon>FractalCanvass2.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Canvass2.aspx.designer.cs">
-      <DependentUpon>Canvass2.aspx</DependentUpon>
+    <Compile Include="FractalCanvass2.aspx.designer.cs">
+      <DependentUpon>FractalCanvass2.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Canvass2Q2.aspx.cs">
-      <DependentUpon>Canvass2Q2.aspx</DependentUpon>
+    <Compile Include="FractalCanvass4.aspx.cs">
+      <DependentUpon>FractalCanvass4.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Canvass2Q2.aspx.designer.cs">
-      <DependentUpon>Canvass2Q2.aspx</DependentUpon>
+    <Compile Include="FractalCanvass4.aspx.designer.cs">
+      <DependentUpon>FractalCanvass4.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Canvass3.aspx.cs">
-      <DependentUpon>Canvass3.aspx</DependentUpon>
+    <Compile Include="TrigoGraph.aspx.cs">
+      <DependentUpon>TrigoGraph.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Canvass3.aspx.designer.cs">
-      <DependentUpon>Canvass3.aspx</DependentUpon>
+    <Compile Include="TrigoGraph.aspx.designer.cs">
+      <DependentUpon>TrigoGraph.aspx</DependentUpon>
     </Compile>
     <Compile Include="Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
@@ -408,14 +398,6 @@
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
-    <Compile Include="FractalCanvass.aspx.cs">
-      <DependentUpon>FractalCanvass.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="FractalCanvass.aspx.designer.cs">
-      <DependentUpon>FractalCanvass.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="FractalImages.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -434,13 +416,6 @@
       <DependentUpon>GraphicDashBoard.aspx</DependentUpon>
     </Compile>
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="OldDefaultPage.aspx.cs">
-      <DependentUpon>OldDefaultPage.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="OldDefaultPage.aspx.designer.cs">
-      <DependentUpon>OldDefaultPage.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
@@ -457,12 +432,12 @@
       <DependentUpon>Site.Mobile.Master</DependentUpon>
     </Compile>
     <Compile Include="Startup.cs" />
-    <Compile Include="TestGraphCanvass.aspx.cs">
-      <DependentUpon>TestGraphCanvass.aspx</DependentUpon>
+    <Compile Include="TargetActualGraphCanvass.aspx.cs">
+      <DependentUpon>TargetActualGraphCanvass.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="TestGraphCanvass.aspx.designer.cs">
-      <DependentUpon>TestGraphCanvass.aspx</DependentUpon>
+    <Compile Include="TargetActualGraphCanvass.aspx.designer.cs">
+      <DependentUpon>TargetActualGraphCanvass.aspx</DependentUpon>
     </Compile>
     <Compile Include="TestGraphs.aspx.cs">
       <DependentUpon>TestGraphs.aspx</DependentUpon>
